--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "fragments-ui",
   "version": "0.0.1",
   "description": "web app to manage authentication with User Pool and test back-end fragments microservice",
-  "engines": {
-    "node": ">=16"
-  },
-  "main": "auth.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
